New XML methods and minor improvements.